src/main/java/com/example/productapi/error/Exception/InternalServerErrorException.java
package com.example.productapi.error.Exception;

public class InternalServerErrorException extends RuntimeException {
    public InternalServerErrorException(String message) {
        super(message);
    }
}
